# McKinsey-casecomp

./: .gitignore  .npmrc  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 69fc88a18928_initial_schema.py
apps/api/app/: main.py
apps/api/app/ai/: agents.py  decision_engine.py  interfaces.py  tools.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: activity.py  agents.py  auth.py  customers.py  dashboard.py  finance.py  health.py  inventory.py  notifications.py  operations.py  purchase_orders.py  suppliers.py  vehicles.py  workflows.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  seed.py  session.py
apps/api/app/db/models/: __init__.py  ai.py  crm.py  enums.py  finance.py  inventory.py  maintenance.py  operations.py  organization.py  telematics.py  types.py  workflow.py
apps/api/app/events/: bus.py
apps/api/app/integrations/: ais140_adapter.py  base.py  dms_adapter.py  email_adapter.py  registry.py  sap_adapter.py  sms_adapter.py  whatsapp_adapter.py
apps/api/app/schemas/: auth.py  common.py  entities.py
apps/api/app/services/: agent_service.py  analytics.py  crud.py  listing.py  serialize.py
apps/api/app/workflows/: definitions.py  engine.py  steps.py
apps/web/: .env.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docker/: README.md
docs/: ARCHITECTURE.md
(+44 files in other folders)
